# cpp-perftest

./: CMakeLists.txt
cmake/: toolchain.cmake
cmake/Hunter/: config.cmake
data/: istream.json
src/: istream.cpp
